fix @media bug, cannot display on mobile devices

--- a/Thời tiết/data/css/design.css
+++ b/Thời tiết/data/css/design.css
@@ -186,11 +186,22 @@ a:any-link {
   width: 200px;
   height: 70px;
 }
+@media screen and (min-width: 1024px) {
 #typing-test {
   display:inline-block;
   margin-top: -17.7cm;
 }
+
 .share-screen {margin-top: -16.4cm;}
+}
+@media screen and (max-width: 480px) {
+  #typing-test {
+    margin-top: 1cm;
+    display:inline-block;
+  }
+  #share-screen {margin-top: -23.7cm;}
+}
+
 #search1 {gap:0.25rem;}
 #share-screen-video {width: 300px;height:150px;}
 #others {flex-direction: row;}
